classDiagram
    %% Camada de UI e Entrada
    class Main {
        +main(String[] args)
    }

    class ApplicationUI {
        -BibliotecaService bibliotecaService
        +iniciarUi()
    }

    %% Camada de Serviço (Facade Singleton)
    class BibliotecaService {
        -BibliotecaService INSTANCIA$
        -AutorService autorService
        -LivroService livroService
        -ClienteService clienteService
        -EditoraService editoraService
        -EmprestimoService emprestimoService
        -BibliotecaService()
        +getInstancia()$ BibliotecaService
        +cadastrar(Object) boolean
        +excluir(Object) boolean
        +atualizar(Object) boolean
        +getLivros() List~Livro~
        +getAutores() List~Autor~
        +getClientes() List~Cliente~
    }

    %% Serviços Específicos
    class AutorService {
        -AutorRepository repository
        +salvar(Autor) Autor
        +buscarPorId(int) Optional
        +excluir(int) boolean
    }

    class ClienteService {
        -ClienteRepository repository
        +salvar(Cliente) Cliente
        +buscarPorId(int) Optional
    }

    class LivroService {
        -LivroRepository repository
        +salvar(Livro) Livro
        +buscarPorIsbn(int) Optional
    }

    %% Repositórios
    class AutorRepository {
        -List~Autor~ autores
        -int proximoId
        +salvar(Autor) Autor
        +buscarPorId(int) Optional
        +listarTodos() List~Autor~
    }

    class ClienteRepository {
        -List~Cliente~ clientes
        +salvar(Cliente) Cliente
    }

    %% Entidades
    class Autor {
        +int id
        +String nome
        +String nacionalidade
    }

    class Cliente {
        +int id
        +String nome
        +String email
        +String telefone
        +String cpf
    }

    class Editora {
        +int id
        +String nome
        +String cnpj
        +String endereco
        +String telefone
        +String email
    }

    class Livro {
        +int isbn
        +String titulo
        +int numeroDePaginas
        +int anoPublicacao
        +Categoria categoria
        +Editora editora
        +Autor autor
    }

    class Emprestimo {
        +int id
        +Livro livro
        +LocalDate dataEmprestimo
        +LocalDate dataPrevistaDevolucao
        +boolean devolvido
    }

    class Categoria {
        <<enumeration>>
        FICCAO
        ROMANCE
        TECNOLOGIA
        ARTE
        INFANTO_JUVENIL
    }

    %% Relacionamentos
    Main --> BibliotecaService : acessa
    ApplicationUI --> BibliotecaService : usa
    
    BibliotecaService *-- AutorService
    BibliotecaService *-- ClienteService
    BibliotecaService *-- LivroService
    BibliotecaService *-- EditoraService
    BibliotecaService *-- EmprestimoService

    AutorService --> AutorRepository
    ClienteService --> ClienteRepository
    LivroService --> LivroRepository

    AutorRepository o-- Autor
    ClienteRepository o-- Cliente

    Livro --> Autor
    Livro --> Editora
    Livro --> Categoria
    Emprestimo --> Livro
